<resources>
    <string name="google_maps_key">AIzaSyAYCqiwp3mZGjmqrwBuSAaKJdXzyxc4XE8</string>
    <string name="parse_application_id">6vib3ykygZ4Ws33c1gOhrpSuAEF7nKWYtijZymtL</string>
    <string name="parse_client_key">ZJuHuFMu6mYZPP30OkcQxtEjKJ9cpTFVWoq1EBS2</string>
    <string name="facebook_app_id">801692569977560</string>
    <string name="tienda_restaurantes_url_request">http://104.236.3.158:82/api/store/category_products/1/sellers/</string>
    <string name="user_api_token">a1126926b8c36df18516d31e054d2f8a8074d12f</string>
    <string name="analytics_app_id">UA-41312086-2</string>
    <string name="user_api">jon</string>
    <string name="password_api">jonpunk</string>
    <string name="app_name">México GP</string>
    <string name="hello_world">HOLa Mundo</string>
    <string name="action_settings">Configuraciones</string>
    <string name="title_activity_course_detail">CourseDetailActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="localiza_tu_zona">LOCALIZA TU ZONA</string>
    <string name="descripcion_ubica_tu_zona_texto">DESCRIPCIÓN ÚBICA TU ZONA</string>
    <string name="como_llegar_mensaje">El evento no contará con estacionamiento, por lo que te recomendamos revisar las mejores rutas de transporte público.</string>
    <string name="menu_home">INICIO</string>
    <string name="menu_autodromo">INFORMACIÓN</string>
    <string name="menu_noticias">NOTICIAS</string>
    <string name="menu_horarios">HORARIOS</string>
    <string name="menu_resultados">RESULTADOS</string>
    <string name="menu_pilotos">PILOTOS</string>
    <string name="menu_pasion">COMPARTE TU PASIÓN</string>
    <string name="menu_cd_mexico">MÉXICO</string>
    <string name="menu_tienda">TIENDA</string>
    <string name="menu_social_hub">SOCIAL HUB</string>
    <string name="menu_registrate_gana">¡REGÍSTRATE Y GANA!</string>
    <string name="menu_configuraciones">CONFIGURACIONES</string>
    <string name="descripcion_contador_dias">DÍAS</string>
    <string name="descripcion_contador_horas">HORAS</string>
    <string name="descripcion_contador_minutos">MINUTOS</string>
    <string name="descripcion_contador_segundos">SEGUNDOS</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="activa_gps">CON ESTA FUNCIÓN PODRÁS ENCONTRAR LAS MEJORES OPCIONES DE TRANSPORTE HACIA EL AUTÓDROMO</string>
    <string name="activa_notificaciones">CON ESTA FUNCIÓN RECIBIRÁS INFORMACIÓN EN TIEMPO REAL DEL EVENTO Y SUS RESULTADOS</string>
    <string name="activa_gps_ahora">ACTIVAR LOCALIZACIÓN</string>
    <string name="activa_notificaciones_ahora">ACTIVAR NOTIFICACIONES</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="dias">DÍAS</string>
    <string name="horas">HORAS</string>
    <string name="minutos">MINUTOS</string>
    <string name="segundos">SEGUNDOS</string>
    <string name="tipo_notificaciones">¿QUÉ TIPO DE NOTIFICACIONES QUIERES RECIBIR?</string>
    <string name="todas">TODAS</string>
    <string name="resultados">RESULTADOS</string>
    <string name="equipos_pilotos">EQUIPOS Y PILOTOS</string>
    <string name="eventos">EVENTOS</string>
    <string name="noticias">NOTICIAS</string>
    <string name="anterior">ANTERIOR</string>
    <string name="ult_noticias">ÚLTIMAS NOTICIAS</string>
    <string name="drawer_open">Abrir navigation drawer</string>
    <string name="drawer_close">Cerrar navigation drawer</string>
    <string name="vive_el_mexicogp">VIVE EL #MexicoGP EN:</string>
    <string name="enterate_demuchos_eventos">¿Enterate de muchos eventos más!</string>
    <string name="compartir_usando">Compartir usando...</string>
    <string name="imgDescargada">¡Imagen descargada!</string>
    <string name="terminos">TÉRMINOS Y CONDICIONES</string>
    <string name="politicas">POLÍTICAS DE PRIVACIDAD</string>
    <string name="prompt_first_name">Nombre</string>
    <string name="prompt_last_name">Apellido</string>
    <string name="prompt_email">Email</string>
    <string name="sign_up">¡ENVIAR Y PARTICIPAR!</string>
    <string name="campos_obligatorios">Todos los campos son obligatorios</string>
    <string name="gracias_participar">GRACIAS POR PARTICIPAR</string>
    <string name="datos_registrados">TUS DATOS YA ESTÁN REGISTRADOS</string>
    <string name="caso_seleccionado">EN CASO DE SER SELECCIONADO</string>
    <string name="caso_seleccionado2">TE CONTACTAREMOS POR CUALQUIERA \n DE LOS MEDIOS QUE NOS PROPORCIONASTE.</string>
    <string name="comparte_tu_pasion_popup">¡COMPARTE TU PASIÓN!</string>
    <string name="comparte_tu_pasion_paso1">1.- Selecciona tu sticker favorito.</string>
    <string name="comparte_tu_pasion_paso2">2.- Toma una fotografía o selecciónala de tu galería.</string>
    <string name="comparte_tu_pasion_paso3">3.- Comparte tu foto en tus redes sociales y apoya a tu corredor favorito.</string>
    <string name="item_name">ARTÍCULO</string>
    <string name="item_qty">CANTIDAD</string>
    <string name="item_price">PRECIO</string>
    <string name="item_elim">    </string>
    <string name="continuar">CONTINUAR</string>
    <string name="cancelar"> CANCELAR </string>
</resources>