<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="100dp"
    android:paddingBottom="0dp"
    android:background="@drawable/bg_mensaje_registro"
    tools:context="com.punkmkt.formula1.GraciasParticiparActivity">

    <TextView
        android:id="@+id/gracias_participar"
        android:text="@string/gracias_participar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="italic|bold"
        android:gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/datos_registrados"
        android:text="@string/datos_registrados"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        android:gravity="center"
        android:layout_below="@+id/gracias_participar"
        android:textColor="@color/red_background"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/caso_seleccionado"
        android:text="@string/caso_seleccionado"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        android:gravity="center"
        android:layout_below="@+id/datos_registrados"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/caso_seleccionado2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/caso_seleccionado2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_below="@+id/caso_seleccionado"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>
</RelativeLayout>
