<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:background="@color/black"
    tools:context="com.punkmkt.formula1.GraciasParticiparActivity">


<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <TextView
        android:id="@+id/comparte_tu_pasion_popup"
        android:text="@string/comparte_tu_pasion_popup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="italic|bold"
        android:gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/caso_seleccionado"
        android:text="@string/comparte_tu_pasion_paso1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@+id/comparte_tu_pasion_popup"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"/>
    <TextView
        android:id="@+id/caso_seleccionado2"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/comparte_tu_pasion_paso2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@+id/caso_seleccionado"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/caso_seleccionado3"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/comparte_tu_pasion_paso3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@+id/caso_seleccionado2"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>
</RelativeLayout>
</ScrollView>