<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/grey_background"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        >
        <TextView
            android:text="@string/activa_notificaciones"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/activa_notificaciones_ahora"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_alignParentLeft="true"
                android:textColor="@color/black"
                />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/turnNotification"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text=""
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_below="@+id/borde"
                android:textOn="ON"
                android:textOff="OFF"
                android:gravity="right"
                android:layout_alignParentRight="true"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        >
        <TextView
            android:text="@string/activa_gps"
            android:layout_width="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:text="@string/activa_gps_ahora"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/black"
                android:layout_alignParentLeft="true"
                />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/turnGPS"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:text=""
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_below="@+id/borde"
                android:textOn="ON"
                android:textOff="OFF"
                android:gravity="right"
                android:layout_alignParentRight="true"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/politicas"
            android:textColor="@color/black"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="20sp"
            android:onClick="IniciarPoliticasPrivacidadActivity"
            android:clickable="true"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/terminos"
            android:textColor="@color/black"
            android:background="@color/white"
            android:padding="10dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:onClick="IniciarTerminosServicioActivity"
            android:clickable="true"
            />
    </LinearLayout>
</LinearLayout>
