<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >


    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_first_name"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_last_name"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/container_gender_edad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_below="@+id/email"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">
        <Spinner
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_gender" />

        <Spinner
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_edad" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_zona_asiento"
        android:layout_below="@+id/container_gender_edad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">
        <Spinner
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_zona" />
        <Spinner
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_asiento" />
    </LinearLayout>
    <TextView
        android:id="@+id/name"
        android:visibility="gone"
        android:text=""
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/facebook_id"
        android:visibility="gone"
        android:text=""
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/locale"
        android:visibility="gone"
        android:text=""
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/link"
        android:visibility="gone"
        android:text=""
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/age_range"
        android:visibility="gone"
        android:text=""
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@+id/container_zona_asiento"
        android:id="@+id/campos_obligatorios"
        android:textColor="@color/red_background"
        android:textSize="12sp"
        android:text="@string/campos_obligatorios"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/action_button"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textSize="15sp"
        android:text="@string/sign_up" />

    <LinearLayout
        android:id="@+id/fragment_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/action_button">

    </LinearLayout>
</LinearLayout>