<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="20dp"
    android:elevation="22dp"
    android:background="@color/black_transparent"
    android:alpha="0.8">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/agrega_cantidad"
            android:text="@string/item_qty"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/white"/>

        <NumberPicker
            android:id="@+id/item_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_horizontal|center"
            android:layout_below="@+id/agrega_cantidad"
            android:layout_centerHorizontal="true"
            android:theme="@style/NumberPickerTextColorStyle" />

        <Button
            android:id="@+id/agregar_awl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/continuar"
            android:background="@color/red_button"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/item_cantidad"/>

        <Button
            android:id="@+id/cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/cancelar"
            android:background="@color/grey_button"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal|center_vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@+id/agregar_awl"
            />

    </RelativeLayout>
</ScrollView>